syntax = "proto3";

package reminderparser;

option java_package = "by.losik.grpc";
option java_multiple_files = true;

service ReminderParserService {
  rpc ParseReminder (ParseRequest) returns (ParseResponse);
  rpc HealthCheck (HealthRequest) returns (HealthResponse);
}

message ParseRequest {
  string text = 1;
  string language_code = 2;
  string user_id = 3;
}

message ParseResponse {
  string reminder_id = 1;
  ParsedReminder parsed = 2;
  double confidence = 3;
  string language_detected = 4;
  string raw_text = 5;
}

message ParsedReminder {
  string action = 1;
  TemporalExpression time_expression = 2;
  repeated Entity entities = 3;
  string normalized_text = 4;
  string intent = 5;
}

message Entity {
  string text = 1;
  string type = 2;
  int32 start = 3;
  int32 end = 4;
  double confidence = 5;
}

message TemporalExpression {
  oneof time_type {
    AbsoluteTime absolute = 1;
    RelativeTime relative = 2;
    RecurringTime recurring = 3;
  }
}

message AbsoluteTime {
  string iso_datetime = 1;
  string natural_language = 2;
}

message RelativeTime {
  int64 seconds_from_now = 1;
  string unit = 2;
  int32 amount = 3;
}

message RecurringTime {
  string cron_expression = 1;
  string description = 2;
}

message HealthRequest {}

message HealthResponse {
  bool healthy = 1;
  string model_version = 2;
  repeated string supported_languages = 3;
  bool auth_required = 4;
  int64 total_requests = 5;
  int64 error_count = 6;
}